chore: deploy Tiny

--- a/lib/tiny.html
+++ b/lib/tiny.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><title>Test Page</title><script defer="defer" src="tiny.js"></script><link href="tiny.css" rel="stylesheet"></head><body><p>Hello</p></body></html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><title>Test Page</title><script defer="defer" src="tiny.js"></script><link href="tiny.css" rel="stylesheet"></head><body><p>Hello</p><div id="tiny-box"></div></body></html>
