fix: show backup link

--- a/src/pages/tiny/index.html
+++ b/src/pages/tiny/index.html
@@ -9,6 +9,9 @@
 <body>
   <p>Hello</p>
   <div id="tiny-box"></div>
+  <script>
+    window.TINY_FOREIGN_BASE_URL = "https://example.com";
+  </script>
 </body>
 
 </html>
